gen/cloudshell/v1alpha1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-cloudshell1_alpha1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/cloudshell/v1alpha1/lib)
error[E0423]: expected value, found struct `environments::EnvironmentsActions`
   --> gen/cloudshell/v1alpha1/lib/src/lib.rs:591:13
    |
591 |             environments::EnvironmentsActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `environments::EnvironmentsActions { /* fields */ }`?

error[E0423]: expected value, found struct `public_keys::PublicKeysActions`
   --> gen/cloudshell/v1alpha1/lib/src/lib.rs:695:17
    |
695 |                 public_keys::PublicKeysActions
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `public_keys::PublicKeysActions { /* fields */ }`?

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-cloudshell1_alpha1`.

To learn more, run the command again with --verbose.
